DuPont DevSB/src/objects/ConstructionPts__CP_Matching__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__CPMatchingType__c</fullName>
        <description>CPMatching Types:
0 - field to field
1 - default value (non Date)
2 - default value (Date)</description>
        <label>CPMatchingType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConstructionPts__CPMatching_Id__c</fullName>
        <externalId>true</externalId>
        <label>CPMatching Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Match_Priority__c</fullName>
        <description>From highest to lowest priority, lowest priority matches will be processed first and overriden, if needed, by highest priority matches.
Used in case of multiple match records for an object.</description>
        <label>Match Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__NoOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NoOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_AssignTo_Field__c</fullName>
        <label>Object1 Assign To Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_FieldID__c</fullName>
        <label>Object1 FieldID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_FieldName__c</fullName>
        <label>Object1 Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_FieldToClear__c</fullName>
        <description>This field is used for the case when the Object1_FieldToAssign and Object1_FieldToClear values are mutually exclusive, ie. if one is set, the other has to be set to NULL.</description>
        <label>Object1 FieldToClear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_FieldType__c</fullName>
        <label>Object1 FieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_Related_Field_Op__c</fullName>
        <label>Object1_Related_Field_Op</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_Related_Field_criteria__c</fullName>
        <label>Object1_Related_Field_criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_Related_Field_value__c</fullName>
        <label>Object1_Related_Field_value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_Related_Object2_API_Name__c</fullName>
        <label>Object1_Related_Object2_API_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_Related_Object2__c</fullName>
        <label>Object1_Related_Object2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_Related_Object__c</fullName>
        <label>Object1_Related_Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1_Related_SortOrder__c</fullName>
        <label>Object1 Related SortOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object1__c</fullName>
        <label>Object1</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2_AssignTo_Field__c</fullName>
        <label>Object2 Assign To Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2_FieldFormula__c</fullName>
        <label>Object2 FieldFormula</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2_FieldID__c</fullName>
        <label>Object2 FieldID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2_FieldName__c</fullName>
        <label>Object2 Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2_FieldType__c</fullName>
        <label>Object2 FieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2_Field_Default_Value__c</fullName>
        <label>Object2 Field Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2_Id__c</fullName>
        <label>Object2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Object2__c</fullName>
        <label>Object2</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Override__c</fullName>
        <label>Override?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Redirect_URL__c</fullName>
        <description>Redirect URL or the custom page to prepopulate</description>
        <inlineHelpText>Redirect URL or the custom page to prepopulate</inlineHelpText>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Save_URL__c</fullName>
        <label>Save URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__isBatchMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBatchMatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CP Matching</label>
    <listViews>
        <fullName>ConstructionPts__All</fullName>
        <columns>NAME</columns>
        <columns>ConstructionPts__CPMatching_Id__c</columns>
        <columns>ConstructionPts__Object1__c</columns>
        <columns>ConstructionPts__Object2__c</columns>
        <columns>ConstructionPts__Object1_FieldID__c</columns>
        <columns>ConstructionPts__Object1_FieldName__c</columns>
        <columns>ConstructionPts__Object2_FieldID__c</columns>
        <columns>ConstructionPts__Object2_FieldName__c</columns>
        <columns>ConstructionPts__Match_Priority__c</columns>
        <columns>ConstructionPts__isBatchMatch__c</columns>
        <columns>ConstructionPts__Object1_Related_Object__c</columns>
        <columns>ConstructionPts__Override__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ConstructionPts__All1</fullName>
        <columns>ConstructionPts__Override__c</columns>
        <columns>ConstructionPts__CPMatching_Id__c</columns>
        <columns>NAME</columns>
        <columns>ConstructionPts__Object1__c</columns>
        <columns>ConstructionPts__Object1_FieldID__c</columns>
        <columns>ConstructionPts__Object2__c</columns>
        <columns>ConstructionPts__Object2_FieldID__c</columns>
        <columns>ConstructionPts__Redirect_URL__c</columns>
        <columns>ConstructionPts__Save_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ConstructionPts__CP_Contact</fullName>
        <columns>NAME</columns>
        <columns>ConstructionPts__CPMatching_Id__c</columns>
        <columns>ConstructionPts__Object1__c</columns>
        <columns>ConstructionPts__Object1_FieldName__c</columns>
        <columns>ConstructionPts__Object1_FieldID__c</columns>
        <columns>ConstructionPts__Object2__c</columns>
        <columns>ConstructionPts__Object2_FieldName__c</columns>
        <columns>ConstructionPts__Object2_FieldID__c</columns>
        <columns>ConstructionPts__Override__c</columns>
        <columns>ConstructionPts__isBatchMatch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ConstructionPts__Object1__c</field>
            <operation>contains</operation>
            <value>CP_Contact</value>
        </filters>
        <label>CP Contact Mappings</label>
    </listViews>
    <nameField>
        <label>CP Matching Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Matching</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>